# OsuSvTool

./: CMakeLists.txt  README.md  SVapp.cpp  SVapp.h
include/: ButtonMenu.h  MainFrame.h  MainNotebook.h  NormalizePanel.h
include/Logic/: MapConfig.h  Normalizer.h  PunchGenerator.h
include/UI/: MainFrame.h  MainNotebook.h  NormalizePanel.h  PunchPanel.h  SVapp.h
src/: MainFrame.cpp  MainNotebook.cpp  NormalizePanel.cpp  SVapp.cpp
src/Logic/: MapConfig.cpp  Normalizer.cpp  PunchGenerator.cpp
src/UI/: MainFrame.cpp  MainNotebook.cpp  NormalizePanel.cpp  PunchPanel.cpp  SVapp.cpp
